<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    android:layout_marginStart="50dp"
    android:layout_marginEnd="50dp"
    android:layout_marginTop="120dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/value_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text= "@string/value_1"
        />

    <EditText
        android:id="@+id/editText1"
        android:layout_below="@+id/value_1"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:hint="@string/inputField"
        />

    <TextView
        android:id="@+id/value_2"
        android:layout_below="@+id/editText1"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text= "@string/value_2"
        />

    <EditText
        android:id="@+id/editText2"
        android:layout_below="@+id/value_2"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:hint="@string/inputField"
        />


    <RelativeLayout
        android:id="@+id/buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText2"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/plus"
            android:tag="+"
            android:text="@string/plus"
            android:layout_width="60dp"
            android:layout_height="70dp"
            android:onClick="onOperation"
            />

        <Button
            android:id="@+id/minus"
            android:tag="-"
            android:text="@string/minus"
            android:layout_toEndOf="@+id/plus"
            android:layout_width="60dp"
            android:layout_height="70dp"
            android:layout_marginStart="7dp"
            android:onClick="onOperation"
            />

        <Button
            android:id="@+id/multiply"
            android:tag="*"
            android:text="@string/mult"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@+id/minus"
            android:layout_width="60dp"
            android:layout_height="70dp"
            android:onClick="onOperation"
            />

        <Button
            android:id="@+id/divider"
            android:tag="/"
            android:text="@string/divide"
            android:layout_toEndOf="@+id/multiply"
            android:layout_width="60dp"
            android:layout_height="70dp"
            android:layout_marginStart="7dp"
            android:onClick="onOperation"
            />

    </RelativeLayout>

    <TextView
        android:id="@+id/resultText"
        android:visibility="invisible"
        android:layout_below="@+id/buttons"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text= "@string/resultText"
        />

    <TextView
        android:id="@+id/result"
        android:visibility="invisible"
        android:layout_below="@+id/buttons"
        android:layout_marginTop="20dp"
        android:layout_toEndOf="@+id/resultText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text= "@string/resultNumber"
        />

</RelativeLayout>